--- a/index.html
+++ b/index.html
@@ -20,72 +20,67 @@
           <div class="card-body">
             <h3 class="card-title text-center mb-4">User Registration</h3>
 
-            <form>
-              <!-- First Name -->
-              <div class="mb-3">
-                <label class="form-label">First Name</label>
-                <input type="text" class="form-control" required>
-              </div>
+       <form id="registrationForm">
+  
+  <div class="mb-3">
+    <label class="form-label">First Name</label>
+    <input type="text" id="firstName" class="form-control" required>
+  </div>
 
-              <!-- Last Name -->
-              <div class="mb-3">
-                <label class="form-label">Last Name</label>
-                <input type="text" class="form-control" required>
-              </div>
+  <div class="mb-3">
+    <label class="form-label">Last Name</label>
+    <input type="text" id="lastName" class="form-control" required>
+  </div>
 
-              <!-- Email -->
-              <div class="mb-3">
-                <label class="form-label">Email</label>
-                <input type="email" class="form-control" required>
-              </div>
+  <div class="mb-3">
+    <label class="form-label">Email</label>
+    <input type="email" id="email" class="form-control" required>
+  </div>
 
-              <!-- Password -->
-              <div class="mb-3">
-                <label class="form-label">Password</label>
-                <input type="password" class="form-control" required>
-              </div>
+  <div class="mb-3">
+    <label class="form-label">Password</label>
+    <input type="password" id="password" class="form-control" required>
+  </div>
 
-              <!-- Select Menu -->
-              <div class="mb-3">
-                <label class="form-label">Country</label>
-                <select class="form-select" required>
-                  <option value="">Select your country</option>
-                  <option>USA</option>
-                  <option>Canada</option>
-                  <option>UK</option>
-                  <option>Australia</option>
-                </select>
-              </div>
+  <div class="mb-3">
+    <label class="form-label">Country</label>
+    <select id="country" class="form-select" required>
+      <option value="">Select your country</option>
+      <option>USA</option>
+      <option>Canada</option>
+      <option>UK</option>
+      <option>Australia</option>
+    </select>
+  </div>
 
-              <!-- Radio Buttons -->
-              <div class="mb-3">
-                <label class="form-label d-block">Account Type</label>
+  <div class="mb-3">
+    <label class="form-label d-block">Account Type</label>
 
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="accountType" required>
-                  <label class="form-check-label">Standard</label>
-                </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="accountType" value="Standard" required>
+      <label class="form-check-label">Standard</label>
+    </div>
 
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="accountType">
-                  <label class="form-check-label">Premium</label>
-                </div>
-              </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="accountType" value="Premium">
+      <label class="form-check-label">Premium</label>
+    </div>
+  </div>
 
-              <!-- Text Area -->
-              <div class="mb-3">
-                <label class="form-label">About You</label>
-                <textarea class="form-control" rows="4" placeholder="Tell us a little about yourself..."></textarea>
-              </div>
+  <div class="mb-3">
+    <label class="form-label">About You</label>
+    <textarea id="about" class="form-control" rows="4"></textarea>
+  </div>
 
-              <button type="submit" class="btn btn-primary w-100 mb-3">
-                Register
-              </button>
-              
-              <button type="submit" class="btn btn-danger w-100">
-                Reset
-              </button>
-            </form>
+  <button type="submit" class="btn btn-primary w-100 mb-3">
+    Register
+  </button>
+
+  <button type="button" class="btn btn-danger w-100">
+    Reset
+  </button>
+
+</form>
 
           </div>
         </div>
